overflow fixed

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-\html {
+html {
 
   transform: scale(1.5);
 }
@@ -16,6 +16,7 @@ body {
   font-size: 16px;
   margin-top: 100px;
   color: white;
+  overflow: hidden;
 }
 
 .theme-numbers {
